Added functionality for NO_SENSED in the middle of a ground truth section
also added visualizations for f score and a unit test to test the new feature (middle no sensed mode)

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -265,10 +265,21 @@
     "            for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "                if r['eval_role_base'] != role:\n",
     "                    continue\n",
-    "                for tr in r[\"evaluation_trip_ranges\"]:\n",
+    "                for i, tr in enumerate(r[\"evaluation_trip_ranges\"]):\n",
     "                    tr_ss  = []\n",
     "                    tr_gts = []\n",
     "                    for ss in tr[\"sensed_section_ranges\"]:\n",
+    "                        if 'sensed_trip_ranges' in r.keys():\n",
+    "                            if len(tr_ss) > 0:\n",
+    "                                if ss['data']['start_ts'] in [s_tr['data']['start_ts'] for s_tr in r['sensed_trip_ranges']]:\n",
+    "                                    ghost_ss = {\n",
+    "                                        'data' : {\n",
+    "                                            'start_ts' : tr_ss[-1]['data']['end_ts'],\n",
+    "                                            'end_ts' : ss['data']['start_ts'],\n",
+    "                                            'sensed_mode' : 'NO_SENSED'\n",
+    "                                        }\n",
+    "                                    }\n",
+    "                                    tr_ss.append(ghost_ss)\n",
     "                        tr_ss.append(ss)\n",
     "                    for section in tr[\"evaluation_section_ranges\"]:\n",
     "                        section_gt_leg = pv.spec_details.get_ground_truth_for_leg(tr['trip_id_base'],\n",
@@ -287,7 +298,7 @@
     "                    trip['ss_timeline']  = tr_ss\n",
     "                    trip['gts_timeline'] = tr_gts\n",
     "                    trips.append(trip)\n",
-    "    return trips"
+    "    return trips\n"
    ]
   },
   {
@@ -313,19 +324,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RBMM = {     \"WALKING\": \"WALKING\",\n",
-    "             \"RUNNING\" : \"WALKING\", \n",
-    "             \"CYCLING\" : \"CYCLING\",\n",
-    "             \"BICYCLING\": \"CYCLING\",\n",
-    "             \"ESCOOTER\": \"CYCLING\", \n",
-    "             \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "             \"BUS\": \"AUTOMOTIVE\",\n",
-    "             \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "             \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "             \"SUBWAY\": \"AUTOMOTIVE\",\n",
-    "             \"CAR\": \"AUTOMOTIVE\",\n",
-    "             \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
-    "             \"INVALID\" : \"INVALID\"}"
+    "RBMM = {\n",
+    "    \"WALKING\": \"WALKING\",\n",
+    "    \"RUNNING\" : \"WALKING\", \n",
+    "    \"CYCLING\" : \"CYCLING\",\n",
+    "    \"BICYCLING\": \"CYCLING\",\n",
+    "    \"ESCOOTER\": \"CYCLING\", \n",
+    "    \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
+    "    \"BUS\": \"AUTOMOTIVE\",\n",
+    "    \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "    \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "    \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "    \"CAR\": \"AUTOMOTIVE\",\n",
+    "    \"AIR_OR_HSR\": \"AIR_OR_HSR\",\n",
+    "    \"MISALIGNED\" : \"MISALIGNED\", \n",
+    "    \"NO_SENSED\" : \"MISALIGNED\", \n",
+    "    \"NO_GT\" : \"MISALIGNED\", \n",
+    "    \"INVALID\" : \"UNKNOWN\", \n",
+    "    \"UNKNOWN\" : \"UNKNOWN\", \n",
+    "}"
    ]
   },
   {
@@ -367,8 +384,10 @@
     "         \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
     "         \"SUBWAY\": \"AUTOMOTIVE\",\n",
     "         \"CAR\": \"AUTOMOTIVE\",\n",
-    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\",\n",
-    "         \"INVALID\" : \"INVALID\", \n",
+    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\", \n",
+    "        \"NO_SENSED\" : \"MISALIGNED\", \n",
+    "        \"NO_GT\" : \"MISALIGNED\",\n",
+    "         \"MISALIGNED\" : \"MISALIGNED\", \n",
     "         \"UNKNOWN\" : \"UNKNOWN\"}"
    ]
   },
@@ -389,30 +408,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IBMM = {0 : 'UNKNOWN',    # UNKNOWN\n",
+    "RFBMM = {0 : 'UNKNOWN',    # UNKNOWN\n",
     "        1 : 'WALKING',    # WALKING\n",
     "        2 : 'CYCLING',    # BICYCLING\n",
-    "        3 : 'AUTOMOTIVE', # BUS\n",
+    "        3 : 'BUS',        # BUS\n",
     "        4 : 'TRAIN',      # TRAIN\n",
-    "        5 : 'AUTOMOTIVE', # CAR\n",
-    "        6 : 'TRAIN',      # AIR_OR_HSR\n",
+    "        5 : 'CAR',        # CAR\n",
+    "        6 : 'AIR_OR_HSR', # AIR_OR_HSR\n",
     "        7 : 'TRAIN',      # SUBWAY\n",
     "        8 : 'TRAIN',      # TRAM\n",
     "        9 : 'TRAIN',      # LIGHT_RAIL\n",
     "         \"WALKING\": \"WALKING\",\n",
-    "         \"RUNNING\" : \"WALKING\", \n",
     "         \"CYCLING\" : \"CYCLING\",\n",
     "         \"BICYCLING\": \"CYCLING\",\n",
     "         \"ESCOOTER\": \"CYCLING\", \n",
-    "         \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "         \"BUS\": \"AUTOMOTIVE\",\n",
+    "         \"BUS\": \"BUS\",\n",
     "         \"TRAIN\": \"TRAIN\",\n",
     "         \"LIGHT_RAIL\": \"TRAIN\",\n",
     "         \"SUBWAY\": \"TRAIN\",\n",
-    "         \"CAR\": \"AUTOMOTIVE\",\n",
-    "         \"AIR_OR_HSR\": \"TRAIN\",\n",
-    "         \"INVALID\" : \"INVALID\", \n",
-    "         \"UNKNOWN\" : \"UNKNOWN\"}"
+    "         \"CAR\": \"CAR\",\n",
+    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\",\n",
+    "         \"UNKNOWN\" : \"UNKNOWN\",\n",
+    "         \"NO_SENSED\" : \"MISALIGNED\", \n",
+    "         \"NO_GT\" : \"MISALIGNED\",\n",
+    "         \"MISALIGNED\" : \"MISALIGNED\", \n",
+    "       }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "507c0aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GISBMM = {0 : 'UNKNOWN',    # UNKNOWN\n",
+    "        1 : 'WALKING',    # WALKING\n",
+    "        2 : 'CYCLING',    # BICYCLING\n",
+    "        3 : 'BUS',        # BUS\n",
+    "        4 : 'TRAIN',      # TRAIN\n",
+    "        5 : 'CAR',        # CAR\n",
+    "        6 : 'AIR_OR_HSR', # AIR_OR_HSR\n",
+    "        7 : 'SUBWAY',      # SUBWAY\n",
+    "        8 : 'TRAIN',      # TRAM\n",
+    "        9 : 'TRAIN',      # LIGHT_RAIL\n",
+    "         \"WALKING\": \"WALKING\",\n",
+    "         \"CYCLING\" : \"CYCLING\",\n",
+    "         \"BICYCLING\": \"CYCLING\",\n",
+    "         \"ESCOOTER\": \"CYCLING\", \n",
+    "         \"BUS\": \"BUS\",\n",
+    "         \"TRAIN\": \"TRAIN\",\n",
+    "         \"LIGHT_RAIL\": \"TRAIN\",\n",
+    "         \"SUBWAY\": \"TRAIN\",\n",
+    "         \"CAR\": \"CAR\",\n",
+    "         \"AIR_OR_HSR\": \"AIR_OR_HSR\",\n",
+    "         \"UNKNOWN\" : \"UNKNOWN\",\n",
+    "         \"NO_SENSED\" : \"MISALIGNED\", \n",
+    "         \"NO_GT\" : \"MISALIGNED\",\n",
+    "         \"MISALIGNED\" : \"MISALIGNED\", \n",
+    "       }"
    ]
   },
   {
@@ -443,9 +497,9 @@
     "                    no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "                except:\n",
     "                    no_sensed_start = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                    no_sensed_end += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
-    "                if mode == 'INVALID':\n",
-    "                    FP[mode] = no_sensed_end + no_sensed_start\n",
+    "                    no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
+    "                if mode == BASE_MODE['NO_SENSED']:\n",
+    "                    FP[mode] = FP.setdefault(mode, 0) + no_sensed_end + no_sensed_start\n",
     "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']] and mode == BASE_MODE[trip['gts_timeline'][-1]['mode']]:\n",
     "                    FN[mode] = FN.setdefault(mode, 0) + no_sensed_start + no_sensed_end\n",
     "                elif mode == BASE_MODE[trip['gts_timeline'][0]['mode']]:\n",
@@ -478,7 +532,7 @@
     "                assert leftover >= 0, f\"ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\"\n",
     "                if leftover > 0:\n",
     "                    # invalid base mode maps to NO_GT mode\n",
-    "                    if mode == 'INVALID':\n",
+    "                    if mode == BASE_MODE['NO_GT']:\n",
     "                        FN[mode] = TP.setdefault(mode, 0) + leftover\n",
     "                    # We have no gts, but our modes are equal, so a false positive\n",
     "                    elif BASE_MODE[mode] == BASE_MODE[ss['mode']]:\n",
@@ -515,10 +569,13 @@
     "    else:\n",
     "        (TP, FP, FN, TN) = get_binary_class_in_sec(os, role, pv, BASE_MODE, test=True, test_trip=test_trip)\n",
     "    F_score = {}\n",
-    "    for mode in TP.keys():\n",
+    "    for mode in set(BASE_MODE.values()):\n",
     "        numerator   = (1 + beta**2) * TP.setdefault(mode, 0)\n",
     "        denominator = (1+beta**2) * TP.setdefault(mode, 0) + beta**2*FN.setdefault(mode, 0) + FP.setdefault(mode, 0)\n",
-    "        F_score[mode] = (numerator)/(denominator)\n",
+    "        try:\n",
+    "            F_score[mode] = (numerator)/(denominator)\n",
+    "        except:\n",
+    "            F_score[mode] = np.nan\n",
     "    # initializing K \n",
     "    K = 10\n",
     "    for key in F_score:\n",
@@ -540,6 +597,112 @@
     "            pd.DataFrame([ (k, round(get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'HAMFDC', pv, BASE_MODE, beta=1)]).round(4),\n",
     "            pd.DataFrame([ (k, round(get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)[k], 4)) for k in get_F_score(os, 'MAHFDC', pv, BASE_MODE, beta=1)]).round(4)\n",
     "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04282edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig, ax = plt.subplots(3,1, figsize=(10,3*4), dpi=300, sharey=True, sharex=True)\n",
+    "os = 'ios'; role = 'HAHFDC';\n",
+    "for i, role in enumerate(['HAHFDC', 'HAMFDC', 'MAHFDC']):\n",
+    "    raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
+    "    clean = get_F_score(os, role, [cv_la, cv_sj, cv_ucb], CBMM)\n",
+    "    rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
+    "    gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "    df = pd.DataFrame(\n",
+    "        [raw, clean, rf, gis], \n",
+    "        index = ['raw', 'clean', 'random forest', 'GIS'], \n",
+    "        columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
+    "    )\n",
+    "    df.T.plot(style='o', ax=ax[i], title=f' {role} ').legend(loc='lower left')\n",
+    "fig.savefig(f\"images/f_scores_for_{os}_{role}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb38b7db",
+   "metadata": {},
+   "source": [
+    "# Matthews correlation coefficient\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{TP \\times TN - FP \\times FN}{\\sqrt{(TP+FP)(TP + FN)(TN+FP)(TN + FN)}}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c3cee5",
+   "metadata": {},
+   "source": [
+    "# Get support \n",
+    "\n",
+    "Support is the ground truth durration for each class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a58ecb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_support(os, role, pv, BASE_MODE):\n",
+    "    if type(pv) is not list: pv = [pv]\n",
+    "    trips = []\n",
+    "    for v in pv:\n",
+    "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "    support = {}\n",
+    "    for trip in trips:\n",
+    "        ## get gts dur\n",
+    "        gt_dur = 0\n",
+    "        for gts in trip['gts_timeline']:\n",
+    "            mode = BASE_MODE[gts['mode']]\n",
+    "            support[mode] = support.setdefault(mode, 0) + gts['end_ts'] - gts['start_ts']\n",
+    "            gt_dur += (gts['end_ts'] - gts['start_ts'])\n",
+    "        ## check if there is a NO_GT mode\n",
+    "        ss_dur = 0\n",
+    "        for ss in trip['ss_timeline']:\n",
+    "            try:\n",
+    "                ss_dur += (ss['end_ts'] - ss['start_ts'])\n",
+    "            except:\n",
+    "                ss_dur += (ss['data']['end_ts'] - ss['data']['start_ts'])\n",
+    "        support['NO_GT'] = support.setdefault('NO_GT', 0) + max(0, ss_dur - gt_dur)\n",
+    "    return support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ecb4ab2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weighted_f_score(os, role, pv, BASE_MODE):\n",
+    "    support = get_support(os, role, pv, BASE_MODE)\n",
+    "    total_support = sum(support.values())\n",
+    "    F_scores = get_F_score(os, role, pv, BASE_MODE)\n",
+    "    weighted_f_score = sum(support[mode]/total_support * F_scores.setdefault(mode, 0) for mode in support.keys())\n",
+    "    return weighted_f_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03a05173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(weighted_f_score('ios', 'HAHFDC', [gisv_la, gisv_sj, gisv_ucb], GISBMM))\n",
+    "print(weighted_f_score('ios', 'HAHFDC', [rfv_la, rfv_sj, rfv_ucb], RFBMM))\n",
+    "print(weighted_f_score('ios', 'HAHFDC', [cv_la, cv_sj, cv_ucb], CBMM))\n",
+    "print(weighted_f_score('ios', 'HAHFDC', [pv_la, pv_sj, pv_ucb], CBMM))"
    ]
   },
   {
@@ -637,7 +800,7 @@
     "                no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['end_ts'])\n",
     "            except:\n",
     "                no_sensed_start = max(0, trip['ss_timeline'][0]['data']['start_ts'] - trip['gts_timeline'][0]['start_ts'])\n",
-    "                no_sensed_end += max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
+    "                no_sensed_end = max(0, trip['gts_timeline'][-1]['end_ts'] - trip['ss_timeline'][-1]['data']['end_ts'])\n",
     "            if no_sensed_start:\n",
     "                ns = {'sensed_mode' : 'NO_SENSED', trip['gts_timeline'][0]['mode'] : no_sensed_start}\n",
     "                cm_l.append(ns)\n",
@@ -675,9 +838,9 @@
    "outputs": [],
    "source": [
     "def plot_cm(os, pv, d_type, INDEX_MAP=None):\n",
-    "    fig, ax = plt.subplots(1,3, figsize=(15,15), dpi=300, sharey=True)\n",
+    "    fig, ax = plt.subplots(1,3, figsize=(22,10), dpi=300, sharey=True)\n",
     "    y=.95\n",
-    "    fig.text(0.5, 0.04, 'Predicted Label', ha='center', fontsize='xx-large')\n",
+    "    fig.text(0.5, 0.0, 'Predicted Label', ha='center', fontsize='xx-large')\n",
     "    fig.text(0.04, 0.5, 'True Label', va='center', rotation='vertical', fontsize='xx-large')\n",
     "    for k, role in enumerate([\"HAHFDC\", \"HAMFDC\", \"MAHFDC\"]):\n",
     "        if d_type =='raw':\n",
@@ -718,6 +881,7 @@
     "    cbar_ax = fig.add_axes([0.85, 0.15, 0.05, 0.7])\n",
     "    fig.colorbar(cm, cax=cbar_ax)\n",
     "    plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
+    "\n",
     "    plt.savefig(fname=fname)"
    ]
   },
@@ -910,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('android', [rfv_la, rfv_sj, rfv_ucb], IBMM)"
+    "display_f_score('android', [rfv_la, rfv_sj, rfv_ucb], RFBMM)"
    ]
   },
   {
@@ -920,7 +1084,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('ios', [rfv_la, rfv_sj, rfv_ucb], IBMM)"
+    "display_f_score('ios', [rfv_la, rfv_sj, rfv_ucb], RFBMM)"
    ]
   },
   {
@@ -958,7 +1122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('android', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
+    "display_f_score('android', [gisv_la, gisv_sj, gisv_ucb], GISBMM)"
    ]
   },
   {
@@ -968,7 +1132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('ios', [gisv_la, gisv_sj, gisv_ucb], IBMM)"
+    "display_f_score('ios', [gisv_la, gisv_sj, gisv_ucb], GISBMM)"
    ]
   },
   {
@@ -1338,6 +1502,86 @@
    "source": [
     "assert df.loc['WALKING'].loc['WALKING'] == 1\n",
     "assert df.loc['WALKING'].loc['NO_GT'] == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d707491d",
+   "metadata": {},
+   "source": [
+    "## Unimodal Sensed Timeline With Gap\n",
+    "\n",
+    "* sensed timeline\n",
+    "    + WALKING(2, 4) -> CYCLING(6, 8)\n",
+    "* ground truth timeline\n",
+    "    + WALKING(0, 10)\n",
+    "    \n",
+    "#### Classifiers\n",
+    "\n",
+    "* TP\n",
+    "    + WALKING [2]\n",
+    "* FP\n",
+    "    + INVALID [6]\n",
+    "* FN\n",
+    "    + WALKING [8]\n",
+    "* TN\n",
+    "    + INVALID [4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0abfb613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = [\n",
+    "    {\n",
+    "        'gts_timeline'  : [{'start_ts' : 0, 'end_ts' : 10, 'mode' : 'WALKING'}],\n",
+    "        'ss_timeline' : [\n",
+    "            {'start_ts' : 0, 'end_ts' : 2, 'mode' : 'NO_SENSED'},\n",
+    "            {'start_ts' : 2, 'end_ts' : 4, 'mode' : 'WALKING'},\n",
+    "            {'start_ts' : 4, 'end_ts' : 6, 'mode' : 'NO_SENSED'},\n",
+    "            {'start_ts' : 6, 'end_ts' : 8, 'mode' : 'CYCLING'},\n",
+    "            {'start_ts' : 8, 'end_ts' : 10, 'mode' : 'NO_SENSED'}\n",
+    "        ]\n",
+    "    }\n",
+    "]\n",
+    "test_BMM = {'WALKING' : 'WALKING', 'CYCLING' : 'CYCLING', 'NO_SENSED' : 'INVALID', 'NO_GT' : 'INVALID', 'INVALID' : 'INVALID'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60f76eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274d11e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert res[0]['WALKING'] == 2\n",
+    "assert res[1]['INVALID'] == 6\n",
+    "assert res[2]['WALKING'] == 8\n",
+    "assert res[3]['INVALID'] == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "000dfccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_confusion_matrix(..., ..., ..., test=True, test_trip=test_trip)\n",
+    "df = pd.DataFrame(res).groupby('sensed_mode').sum()"
    ]
   }
  ],
