fixed bugs in align function and formated plots
* fixed logic bug in align relating to empy lists
* fixed typo bugs in align function
* formatted f score plots
* added f score plots for selected algorithms
* added new test cases revolving around empy timelines

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e4eaf05",
+   "id": "03958cde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,10 +470,29 @@
     "    gt_timeline = trip['gts_timeline']\n",
     "    ss_aligned_timeline = []\n",
     "    gt_aligned_timeline = []\n",
-    "    try:\n",
+    "    if len(ss_timeline) == 0:\n",
+    "        if len(gt_timeline) == 0:\n",
+    "            return ss_timeline, gt_timeline\n",
+    "        else:\n",
+    "            ss_timeline.append(\n",
+    "                {\n",
+    "                    'mode' : 'NO_SENSED',\n",
+    "                    'start_ts' : gt_timeline[0]['start_ts'],\n",
+    "                    'end_ts' : gt_timeline[-1]['end_ts']\n",
+    "                }\n",
+    "            )\n",
+    "    if len(gt_timeline) == 0:\n",
+    "        gt_timeline.append(\n",
+    "            {\n",
+    "                'mode' : 'NO_GT',\n",
+    "                'start_ts' : ss_timeline[0]['start_ts'],\n",
+    "                'end_ts' : ss_timeline[-1]['end_ts']\n",
+    "            }\n",
+    "        )\n",
+    "    if 'data' in ss_timeline[0]:\n",
     "        start_misalignment = ss_timeline[0]['data']['start_ts'] - gt_timeline[0]['start_ts']\n",
     "        end_misalignment = ss_timeline[-1]['data']['end_ts'] - gt_timeline[-1]['end_ts']\n",
-    "    except:\n",
+    "    else:\n",
     "        start_misalignment = ss_timeline[0]['start_ts'] - gt_timeline[0]['start_ts']\n",
     "        end_misalignment = ss_timeline[-1]['end_ts'] - gt_timeline[-1]['end_ts']\n",
     "    ####### FILL IN SENSED TIMELINE #######\n",
@@ -493,6 +512,7 @@
     "    for ss in ss_timeline:\n",
     "        if 'data' in ss.keys():\n",
     "            ss = ss['data']\n",
+    "        if 'sensed_mode' in ss.keys():\n",
     "            ss['mode'] = ss['sensed_mode']\n",
     "        if len(ss_aligned_timeline) > 0:\n",
     "            ## check to see if there is a gap ##\n",
@@ -510,11 +530,14 @@
     "        ss_aligned_timeline.append(ss)\n",
     "    ### fill in end ###\n",
     "    if end_misalignment < 0:\n",
+    "        ss = ss_timeline[-1]\n",
+    "        if 'data' in ss.keys():\n",
+    "            ss = ss['data']\n",
     "        ss_aligned_timeline.append(\n",
     "            {\n",
     "                'mode' : 'NO_SENSED',\n",
-    "                'start_ts' : ss_timeline[-1]['end_ts'],\n",
-    "                'end_ts' : ss_timeline[-1]['end_ts'] - end_misalignment\n",
+    "                'start_ts' : ss['end_ts'],\n",
+    "                'end_ts' : ss['end_ts'] - end_misalignment\n",
     "            }\n",
     "        )\n",
     "    ####### FILL IN GT TIMELINE #######\n",
@@ -652,7 +675,7 @@
    "outputs": [],
    "source": [
     "def plot_f_scores(os):\n",
-    "    fig, ax = plt.subplots(3,1, figsize=(10,3*4), dpi=300, sharey=True, sharex=True)\n",
+    "    fig, ax = plt.subplots(1,3, figsize = (15,5), dpi=300, sharey=True, sharex=True)\n",
     "    for i, role in enumerate(['HAHFDC', 'HAMFDC', 'MAHFDC']):\n",
     "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
     "        clean = get_F_score(os, role, [cv_la, cv_sj, cv_ucb], CBMM)\n",
@@ -663,10 +686,41 @@
     "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
+    "        \n",
     "        df.T.plot(style='o', ax=ax[i], title=f' {role} ').legend(loc='lower left')\n",
-    "    title = f\"$F_1$ Scores for Phones Running {os} at Various Configuration Settings\"\n",
-    "    plt.suptitle(title, weight='bold', size='x-large', y=0.94)\n",
+    "        ax[i].set_xticks(range(len(df.T)))\n",
+    "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
+    "    title = f\"$F_1$ Scores by Base Mode for Phones Running {os} at Various Configuration Settings\"\n",
+    "    plt.suptitle(title, weight='bold', size='x-large')\n",
     "    fig.savefig(f\"images/f_scores_for_{os}_{role}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc1ff7a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_f_scores_selected():\n",
+    "    fig, ax = plt.subplots(1,2, figsize = (10,5), dpi=300, sharey=True, sharex=True)\n",
+    "    for i, (os, role) in enumerate([['android', 'HAMFDC'], ['ios', 'HAHFDC']]):\n",
+    "        raw   = get_F_score(os, role, [pv_la, pv_sj, pv_ucb], RBMM)\n",
+    "        clean = get_F_score(os, role, [cv_la, cv_sj, cv_ucb], CBMM)\n",
+    "        rf    = get_F_score(os, role, [rfv_la, rfv_sj, rfv_ucb], RFBMM)\n",
+    "        gis   = get_F_score(os, role, [gisv_la, gisv_sj, gisv_ucb], GISBMM)\n",
+    "        df = pd.DataFrame(\n",
+    "            [raw, clean, rf, gis], \n",
+    "            index = ['raw', 'clean', 'random forest', 'GIS'], \n",
+    "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
+    "        )\n",
+    "        \n",
+    "        df.T.plot(style='o', ax=ax[i], title=f' {role} ').legend(loc='lower left')\n",
+    "        ax[i].set_xticks(range(len(df.T)))\n",
+    "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
+    "    title = f\"$F_1$ Scores by Base Mode for Selected OS Setting Configurations\"\n",
+    "    plt.suptitle(title, weight='bold', size='x-large')\n",
+    "    fig.savefig(f\"images/f_scores_selected\")"
    ]
   },
   {
@@ -837,15 +891,26 @@
     "    for k, role in enumerate([\"HAHFDC\", \"HAMFDC\", \"MAHFDC\"]):\n",
     "        if d_type =='raw':\n",
     "            title = f\"Confusion Matrices for Raw Output Data on Phones Running {os} \\n by Calibration Settings\"\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum()\n",
+    "            sort_dict = {'WALKING' : -1, 'RUNNING' : 0, 'CYCLING' : 1, 'AUTOMOTIVE' : 2, 'INVALID' : 3, 'NO_SENSED' : 4}\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().sort_index(key=lambda x: x.map(sort_dict))\n",
     "            fname = f\"images/raw_cm_{os}\"\n",
     "        elif d_type == 'clean':\n",
     "            title = f\"Confusion Matrices for Clean Output Data on Phones Running {os} \\n by Calibration Settings\"\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP)\n",
+    "            sort_dict = {\n",
+    "                'WALKING' : 0, 'RUNNING' : 1, 'ON_FOOT' : 2, 'BICYCLING' : 3, \n",
+    "                'IN_VEHICLE' : 4, 'AIR_OR_HSR' : 5, 'UNKNOWN' : 6, 'NO_SENSED' :7\n",
+    "            }\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP).sort_index(key=lambda x: x.map(sort_dict))\n",
     "            fname = f\"images/clean_cm_{os}\"\n",
     "        elif d_type == 'random_forest' or 'gis':\n",
-    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP)\n",
+    "            sort_dict = {\n",
+    "                'WALKING' : 0, 'BICYCLING' : 1, 'CAR' : 2, \n",
+    "                'BUS' : 3, 'SUBWAY' : 4, 'LIGHT_RAIL' : 5, \n",
+    "                'TRAIN' : 6, 'AIR_OR_HSR' : 7, 'NO_SENSED' : 8\n",
+    "            }\n",
+    "            df = pd.DataFrame(get_confusion_matrix(os, role, pv)).groupby('sensed_mode').sum().rename(index=INDEX_MAP).sort_index(key=lambda x: x.map(sort_dict))\n",
     "            fname = f\"images/{d_type}_cm_{os}\"\n",
+    "\n",
     "            if d_type == 'random_forest':\n",
     "                title = f\"Confusion Matrices for Inferred Output Data (Random Forest) on Phones Running {os} \\n by Calibration Settings\"\n",
     "            else:\n",
@@ -1096,6 +1161,24 @@
    "outputs": [],
    "source": [
     "plot_f_scores('android')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68bd119e",
+   "metadata": {},
+   "source": [
+    "## Selected Setting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e289b3e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_f_scores_selected()"
    ]
   },
   {
@@ -1505,27 +1588,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a5ffc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "274d11e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "assert res[0]['WALKING'] == 2, f\"WALKING TP IS INCORRECT, SHOULD BE 4, GOT {res[0]['WALKING']}\"\n",
     "assert res[1]['NO_SENSED'] == 6, f\"NO_SENSED FP IS INCORRECT, SHOULD BE 6, GOT {res[1]['NO_SENSED']}\"\n",
-    "assert res[1]['CYCLING'] == 2, f\"CYCLING FP IS INCORRECT, SHOULD BE 2, GOT {res[1]['CYCLING'] == 2}\"\n",
-    "assert res[2]['WALKING'] == 8, f\"WALKING FN IS INCORRECT, SHOULD BE 8, GOT {res[2]['WALKING'] == 8}\"\n",
-    "assert res[3]['NO_SENSED'] == 4, f\"NO_SENSED TN IS INCORRECT, SHOULD BE 4, GOT {res[3]['NO_SENSED'] == 8}\"\n",
-    "assert res[3]['CYCLING'] == 8, f\"CYCLING TN IS INCORRECT, SHOULD BE 8, GOT {res[3]['CYCLING'] == 8}\"\n",
-    "assert res[3]['NO_GT'] == 10, f\"NO_GT TN IS INCORRECT, SHOULD BE 10, GOT {res[3]['NO_GT'] == 8}\""
+    "assert res[1]['CYCLING'] == 2, f\"CYCLING FP IS INCORRECT, SHOULD BE 2, GOT {res[1]['CYCLING'] }\"\n",
+    "assert res[2]['WALKING'] == 8, f\"WALKING FN IS INCORRECT, SHOULD BE 8, GOT {res[2]['WALKING'] }\"\n",
+    "assert res[3]['NO_SENSED'] == 4, f\"NO_SENSED TN IS INCORRECT, SHOULD BE 4, GOT {res[3]['NO_SENSED']}\"\n",
+    "assert res[3]['CYCLING'] == 8, f\"CYCLING TN IS INCORRECT, SHOULD BE 8, GOT {res[3]['CYCLING']}\"\n",
+    "assert res[3]['NO_GT'] == 10, f\"NO_GT TN IS INCORRECT, SHOULD BE 10, GOT {res[3]['NO_GT']}\""
    ]
   },
   {
@@ -1537,6 +1610,112 @@
    "source": [
     "res = get_confusion_matrix(..., ..., ..., test=True, test_trip=test_trip)\n",
     "df = pd.DataFrame(res).groupby('sensed_mode').sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b1f0aed",
+   "metadata": {},
+   "source": [
+    "## Unimodal Sensed Timeline With Gap\n",
+    "### Flip of last trip\n",
+    "* ground truth timeline\n",
+    "    + WALKING(2, 4) -> CYCLING(6, 8)\n",
+    "* sensed timeline\n",
+    "    + WALKING(0, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08145b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flip = [{'gts_timeline' : test_trip[0]['ss_timeline'], 'ss_timeline' : test_trip[0]['gts_timeline']}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f21bee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=flip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d73455f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert res[0]['WALKING'] == 2, f\"WALKING TP IS INCORRECT, SHOULD BE 4, GOT {res[0]['WALKING']}\"\n",
+    "assert res[1]['WALKING'] == 8, f\"WALKING FP IS INCORRECT, SHOULD BE 8, GOT {res[2]['WALKING']}\"\n",
+    "assert res[2]['NO_GT'] == 6, f\"NO_GT TN IS INCORRECT, SHOULD BE 6, GOT {res[3]['NO_GT'] }\"\n",
+    "assert res[2]['CYCLING'] == 2, f\"CYCLING TN IS INCORRECT, SHOULD BE 2, GOT {res[3]['CYCLING'] }\"\n",
+    "assert res[3]['CYCLING'] == 8, f\"CYCLING TN IS INCORRECT, SHOULD BE 8, GOT {res[3]['CYCLING']}\"\n",
+    "assert res[3]['NO_SENSED'] == 10, f\"NO_SENSED TN IS INCORRECT, SHOULD BE 10, GOT {res[3]['NO_SENSED']}\"\n",
+    "assert res[3]['NO_GT'] == 4, f\"NO_GT TN IS INCORRECT, SHOULD BE 4, GOT {res[3]['NO_GT']}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69fdcd69",
+   "metadata": {},
+   "source": [
+    "## No ss, gts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e4cb74c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = [{'gts_timeline'  : [], 'ss_timeline' : []}]\n",
+    "get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36b054de",
+   "metadata": {},
+   "source": [
+    "## No ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9653b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = [{'gts_timeline'  : [{'mode' : 'WALKING', 'start_ts' : 0, 'end_ts' : 1}], 'ss_timeline' : []}]\n",
+    "get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c12a79",
+   "metadata": {},
+   "source": [
+    "## No gts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c29da39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_trip = [{'ss_timeline'  : [{'mode' : 'WALKING', 'start_ts' : 0, 'end_ts' : 1}], 'gts_timeline' : []}]\n",
+    "get_binary_class_in_sec(..., ..., ..., test_BMM, test=True, test_trip=test_trip)"
    ]
   }
  ],
