added formating for saving a matplotlib figure

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03958cde",
+   "id": "0e76db93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,13 +692,13 @@
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
     "    title = f\"$F_1$ Scores by Base Mode for Phones Running {os} at Various Configuration Settings\"\n",
     "    plt.suptitle(title, weight='bold', size='x-large')\n",
-    "    fig.savefig(f\"images/f_scores_for_{os}_{role}\")"
+    "    fig.savefig(f\"images/f_scores_for_{os}\",  bbox_inches=\"tight\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1ff7a3",
+   "id": "d69e395b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,12 +715,12 @@
     "            columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'CAR', 'BUS', 'TRAIN', 'SUBWAY']\n",
     "        )\n",
     "        \n",
-    "        df.T.plot(style='o', ax=ax[i], title=f' {role} ').legend(loc='lower left')\n",
+    "        df.T.plot(style='o', ax=ax[i], title=f' {os}:{role} ').legend(loc='lower left')\n",
     "        ax[i].set_xticks(range(len(df.T)))\n",
     "        ax[i].set_xticklabels(df.columns, rotation = 80)\n",
     "    title = f\"$F_1$ Scores by Base Mode for Selected OS Setting Configurations\"\n",
     "    plt.suptitle(title, weight='bold', size='x-large')\n",
-    "    fig.savefig(f\"images/f_scores_selected\")"
+    "    fig.savefig(f\"images/f_scores_selected\",  bbox_inches=\"tight\")"
    ]
   },
   {
@@ -939,7 +939,7 @@
     "    fig.colorbar(cm, cax=cbar_ax)\n",
     "    plt.suptitle(title, weight='bold', size='x-large', y=y)\n",
     "\n",
-    "    plt.savefig(fname=fname)"
+    "    plt.savefig(fname=fname,  bbox_inches=\"tight\")"
    ]
   },
   {
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68bd119e",
+   "id": "05310f61",
    "metadata": {},
    "source": [
     "## Selected Setting"
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e289b3e4",
+   "id": "95207cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b1f0aed",
+   "id": "5306ecac",
    "metadata": {},
    "source": [
     "## Unimodal Sensed Timeline With Gap\n",
@@ -1628,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08145b3c",
+   "id": "e13b8ab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1638,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1f21bee",
+   "id": "2db1851c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d73455f0",
+   "id": "b4ff0bbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69fdcd69",
+   "id": "3df79a35",
    "metadata": {},
    "source": [
     "## No ss, gts"
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4cb74c",
+   "id": "e4a7aff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1682,7 +1682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b054de",
+   "id": "0ac75551",
    "metadata": {},
    "source": [
     "## No ss"
@@ -1691,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b9653b0",
+   "id": "88b4d865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c12a79",
+   "id": "54e1b1c0",
    "metadata": {},
    "source": [
     "## No gts"
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c29da39",
+   "id": "5ddca601",
    "metadata": {},
    "outputs": [],
    "source": [
