added display for weighted f-score at selected settings

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -655,6 +655,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5cdb925f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_support(os, role, pv, BASE_MODE):\n",
+    "    if type(pv) is not list: pv = [pv]\n",
+    "    trips = []\n",
+    "    for v in pv:\n",
+    "        trips.extend(get_trip_ss_and_gts_timeline(v, os, role))\n",
+    "    support = {}\n",
+    "    for trip in trips:\n",
+    "        ## get gts dur\n",
+    "        gt_dur = 0\n",
+    "        for gts in trip['gts_timeline']:\n",
+    "            mode = BASE_MODE[gts['mode']]\n",
+    "            support[mode] = support.setdefault(mode, 0) + gts['end_ts'] - gts['start_ts']\n",
+    "            gt_dur += (gts['end_ts'] - gts['start_ts'])\n",
+    "        ## check if there is a NO_GT mode\n",
+    "        ss_dur = 0\n",
+    "        for ss in trip['ss_timeline']:\n",
+    "            try:\n",
+    "                ss_dur += (ss['end_ts'] - ss['start_ts'])\n",
+    "            except:\n",
+    "                ss_dur += (ss['data']['end_ts'] - ss['data']['start_ts'])\n",
+    "        support['NO_GT'] = support.setdefault('NO_GT', 0) + max(0, ss_dur - gt_dur)\n",
+    "    return support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3f2534f8",
    "metadata": {},
    "outputs": [],
@@ -1179,6 +1210,23 @@
    "outputs": [],
    "source": [
     "plot_f_scores_selected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9fc2163",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "    \"GIS android \\t\",weighted_f_score('android', 'HAMFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM), '\\n',\n",
+    "    \"GIS ios \\t\", weighted_f_score('ios', 'HAHFDC', [gisv_la,gisv_sj,gisv_ucb], GISBMM)\n",
+    ")\n",
+    "print(\n",
+    "    \"Random Forest android \\t\",weighted_f_score('android', 'HAMFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM), '\\n',\n",
+    "    \"Random Forest ios \\t\",weighted_f_score('ios', 'HAHFDC', [rfv_la,rfv_sj,rfv_ucb], GISBMM)\n",
+    ")"
    ]
   },
   {
