added investigation into ne_sensed and walking

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -1231,6 +1231,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d8e3b06",
+   "metadata": {},
+   "source": [
+    "### Discussion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be5801df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pv_l in [[pv_la, pv_sj, pv_ucb],[cv_la, cv_sj, cv_ucb],[rfv_la,rfv_sj,rfv_ucb],[gisv_la,gisv_sj,gisv_ucb]]:\n",
+    "    df = pd.DataFrame(get_confusion_matrix('android', 'HAMFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
+    "    print(\"NO_SENSED trip perdiction for WALKING android:HAMFDC: \\t\",df['WALKING']['NO_SENSED'] / df['WALKING'].sum())\n",
+    "    df = pd.DataFrame(get_confusion_matrix('ios', 'HAHFDC', pv_l)).groupby('sensed_mode').sum().rename(index=IIM)\n",
+    "    print(\"NO_SENSED trip perdiction for WALKING ios:HAHFDC: \\t\",df['WALKING']['NO_SENSED'] / df['WALKING'].sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5251a9e3",
    "metadata": {},
    "source": [
